# amGHOST_v0

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  amGHOST_Context.hh  amGHOST_EK.hh  amGHOST_Event.hh  amGHOST_System.hh  amGHOST_Types.h  amGHOST_V.hh  amGHOST_Window.hh  make.py  meson.build  meson_options.txt  notes_by_a_16yokid.txt
build_files/: amGHOST_Options.cmake  amGHOST_Variables.cmake  amGHOST_Wrappers.cmake  macros.cmake  wrappers.cmake
ex/: Google's_Ways_Are_Cool.hh  README_by_a_16yoKid.md  amGHOST_dbgWIN32.hh  attribute-power.crash.txt  notes2_by_a_16yokid.txt
include/: amGHOST_Capi.h  amGHOST_Context.hh  amGHOST_Decode.hh  amGHOST_EK.hh  amGHOST_Event.hh  amGHOST_Types.h  amGHOST_Window.hh
intern/: amGHOST_Capi.cpp  amGHOST_ContextGLX11.hh  amGHOST_ContextWGL.cpp  amGHOST_ContextWGL.hh  amGHOST_Logger.hh  amGHOST_System.cpp  amGHOST_SystemWIN32.cpp  amGHOST_SystemWIN32.hh  amGHOST_SystemX11.cpp  amGHOST_SystemX11.hh  amGHOST_SystemXCB.cpp  amGHOST_SystemXCB.hh  amGHOST_V.cpp  amGHOST_WindowWIN32.cpp  amGHOST_WindowWIN32.hh  amGHOST_WindowX11.hh  amGHOST_WindowXCB.hh  renderDoc_SampleLayer.json
tests/: EK_resize.cpp  test.c  test.cpp
